# bazel-go-android-issue

./: .gitignore  README.txt  Vagrantfile  provision.sh
example/: WORKSPACE  build.sh
example/example/: BUILD.bazel  main.go
